Added TMPDIR as alternative TMP_DIR environment variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,12 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -Wno-unused-par
 # TMP_DIR
 if (NOT TMP_DIR)
     if (NOT DEFINED ENV{TMP_DIR})
-        set(TMP_DIR /tmp CACHE PATH "Path to tmp directory")
-        message(WARNING "TMP_DIR is not defined.")
+        if (NOT DEFINED ENV{TMPDIR})
+            set(TMP_DIR /tmp CACHE PATH "Path to tmp directory")
+            message(WARNING "TMP_DIR is not defined.")
+        else ()
+            set(TMP_DIR $ENV{TMPDIR} CACHE PATH "Path to tmp directory")
+        endif()
     else ()
         set(TMP_DIR $ENV{TMP_DIR} CACHE PATH "Path to tmp directory")
     endif ()
