--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/robin-hood-hashing"]
 	path = extern/robin-hood-hashing
 	url = https://github.com/martinus/robin-hood-hashing
+[submodule "extern/spdlog"]
+	path = extern/spdlog
+	url = https://github.com/gabime/spdlog.git
